--- a/app/views/auth/login.ejs
+++ b/app/views/auth/login.ejs
@@ -22,7 +22,7 @@
   <!-- /.login-logo -->
   <div class="card">
     <div class="card-body login-card-body">
-      <% if(locals.guards.length>=1){ %> 
+      <% if(locals.guards.length>1){ %> 
       <div style="margin-bottom: 10px; display: flex; gap: 5px; flex-direction: row; align-items: center;">
           <% for(let guard of locals.guards){ %>
           <a href="/auth/login/<%= guard %>" class="m-0 btn btn-block <%= locals.currentGuard==guard ? 'btn-secondary' : 'btn-outline-secondary' %>"><%= guard %></a>
