--- a/app/views/components/errors.ejs
+++ b/app/views/components/errors.ejs
@@ -1,12 +1,20 @@
 <% if (locals.errors) { %>
-    <div class="alert alert-danger alert-dismissible">
-        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
-          ×
-        </button>
-        <h5><i class="icon fas fa-ban"></i> Errors!</h5>
+  <div class="mb-3">
+    <div class="card card-danger">
+      <div class="card-header">
+        <h3 class="card-title">Errors</h3>
+
+        <!-- /.card-tools -->
+      </div>
+      <!-- /.card-header -->
+      <div class="card-body">
         <% for(let error of locals.errors){ %>
-            <p><%= error.msg %></p>
+          <p><%= error.msg %></p>
         <% } %>
       </div>
+      <!-- /.card-body -->
+    </div>
+    <!-- /.card -->
+  </div>
 <% } %>
 
