implement verify email proccess

--- a/app/views/auth/verifyAccount.ejs
+++ b/app/views/auth/verifyAccount.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title><%= locals.error.statusCode %> Error</title>
+  <title>Error</title>
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -41,7 +41,7 @@
         <div class="error-content">
           <h3><i class="fas fa-exclamation-triangle text-danger"></i> Your account not verified, verify it using one of these:</h3>
           <p>
-            <a href="/">Verify your email</a>
+            <a href="/auth/verify-email/request">Verify your email</a>
           </p>
           
 
