create mailing service

--- a/app/views/auth/login.ejs
+++ b/app/views/auth/login.ejs
@@ -51,7 +51,7 @@
       </form>
    
       <p class="my-1">
-        <a href="forgot-password.html" style="text-decoration: none;">I forgot my password</a>
+        <a href="/auth/password-reset/<%= locals.currentGuard %>/request" style="text-decoration: none;">I forgot my password</a>
       </p>
       <p class="my-1">
         <a href="/auth/register/<%= locals.currentGuard %>" style="text-decoration: none;">Create new account</a>
